# support-bot

./: README.md  main.py  pyproject.toml
app/bot/handlers/group/: message.py
app/bot/handlers/private/: message.py  my_chat_member.py
app/bot/utils/: texts.py
