[project]
name = "support-bot"
version = "0.1.0"
description = "Telegram bot for feedback with topic support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-newsletter>=0.0.12",
    "cachetools>=6.2.4",
    "environs>=14.5.0",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
]
